--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
       <div class="attraction">
 
          <div class="attraction__inner-background">
-            <div class="attraction__title-inner">
-               <h2 class="attraction__title">Engage your <br> superfans</h2>
-            </div>
+
+            <h2 class="attraction__title">Engage your <br> superfans</h2>
+
 
 
 
@@ -123,7 +123,7 @@
          <div class="footer__item"> <a class="logo__link" href="#"><img src="img/logo.png" alt="#" class="logo"></a>
          </div>
          <div class="footer__item"><a class="privacy__policy" href="#">privacy policy</a>
-            <p class="">TERRA FERRA © 2022</p>
+            <p class="copyright">TERRA FERRA © 2022</p>
          </div>
 
 
