--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
          </div>
          <div class="about_us__inner about_us__inner-last">
             <div class="about_us__item">
-               <h2 class="about_us__title">Boost <br> your sales</h2>
+               <h2 class="about_us__title about_us__title--last">Boost <br> your sales</h2>
                <p class="about_us__text">You’ll be amazed at how smooth your progress becomes when you gamify your
                   promotions and content creation.</p>
             </div>
